--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
- <header>
-    <h1>patinho</h1>
-    <img src="mg" alt="patinho">
- </header>   
-</body>
+    <header>
+        <h1>patinho</h1>
+        <img src="mg" alt="patinho">
+    </header>
+
+    <section class="section1">
+        <h2>aaaaaaaaaaa</h2>
+    </section>
+
+    <section>
+        
+    </section>
+   
+
 </html>
