--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     </header>
 
     <section class="section1">
-        <h2>aaaaaaaaaaa</h2>
+        <img src="katherine. 2 .jpg" alt="katherine pirce">
+        <h2>katherine vamp</h2>
     </section>
+
 
     <section>
         
