--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
         <img src="katherine. 2 .jpg" alt="katherine pirce">
         <h2>katherine vamp</h2>
     </section>
-
-
-    <section>
-        
+<section class="section2">
+    <img src="lana del rey met gala .jpg" alt="lana del rey">
+    <h3>lana del rey</h3>
     </section>
    
 
